--- a/public/index.css
+++ b/public/index.css
@@ -36,6 +36,11 @@ button {
   text-align: center;
 }
 
+#container {
+  width: 100%;
+  height: 90%;
+}
+
 #addChatForm {
   width: 100%;
   height: 100%;
@@ -45,6 +50,7 @@ button {
   align-items: center;
 }
 
+/* nickname 입력창 */
 #nicknameBox {
   width: 700px;
   height: 10%;
@@ -66,12 +72,9 @@ button {
   height: 22px;
   font-size: 0.9rem;
 }
+/* nickname 입력창 끝 */
 
-#container {
-  width: 100%;
-  height: 90%;
-}
-
+/* 채팅창 */
 #chatContainer {
   width: 700px;
   height: 80%;
@@ -142,6 +145,9 @@ button {
   margin-top: 10px;
 }
 
+/* 채팅창 끝 */
+
+/* 유저 입력칸 */
 #inputBox {
   display: flex;
   justify-content: center;
@@ -163,6 +169,8 @@ button {
   height: 32px;
 }
 
+/* 유저 입력칸 끝 */
+
 .button {
   border-left: 1px solid rgba(0, 0, 0, 0.2);
   cursor: pointer;
@@ -170,6 +178,7 @@ button {
   border-bottom-right-radius: 10px;
 }
 
+/* 스크롤 바 삭제 */
 .box {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
