--- a/public/index.css
+++ b/public/index.css
@@ -85,64 +85,59 @@ button {
   overflow-y: scroll;
 }
 
-#client-chatBox {
+.chatBox {
   width: 100%;
   height: auto;
   display: flex;
-  justify-content: flex-end;
   border-radius: 15px;
   margin-bottom: 10px;
+}
+
+#client-chatBox {
+  justify-content: flex-end;
 }
 
 #server-chatBox {
-  width: 100%;
-  height: auto;
-  display: flex;
   justify-content: flex-start;
-  border-radius: 15px;
-  margin-bottom: 10px;
 }
 
-#client-inside-chatBox {
+.inside-chatBox {
   width: auto;
   max-width: 400px;
+  min-width: 50px;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: flex-end;
   background-color: #e9e9e9;
   border-radius: 10px;
+}
+
+#client-inside-chatBox {
+  align-items: flex-end;
   padding-right: 10px;
   padding-left: 15px;
   margin-right: 10px;
 }
 
 #server-inside-chatBox {
-  width: auto;
-  max-width: 400px;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   align-items: flex-start;
-  background-color: #e9e9e9;
-  border-radius: 10px;
   padding-right: 15px;
   padding-left: 10px;
   margin-left: 10px;
 }
 
-#client-nicknameBox {
+.nicknameBox {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  text-align: end;
   margin-top: 10px;
 }
 
+#client-nicknameBox {
+  text-align: end;
+}
+
 #server-nicknameBox {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   text-align: start;
-  margin-top: 10px;
 }
 
 /* 채팅창 끝 */
