--- a/public/index.css
+++ b/public/index.css
@@ -118,12 +118,35 @@ button {
   padding-right: 10px;
   padding-left: 15px;
   margin-right: 10px;
+  border-bottom-left-radius: 25px;
 }
 
 #server-inside-chatBox {
   align-items: flex-start;
   padding-right: 15px;
   padding-left: 10px;
+  margin-left: 10px;
+  border-bottom-right-radius: 25px;
+}
+
+.system-inside-chatBox {
+  width: auto;
+  max-width: 400px;
+  min-width: 50px;
+  height: auto;
+  display: flex;
+  border-radius: 10px;
+  background-color: #8c7ae6;
+  color: whitesmoke;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+#system-client-inside-chatBox {
+  margin-right: 10px;
+}
+
+#system-server-inside-chatBox {
   margin-left: 10px;
 }
 
@@ -132,9 +155,23 @@ button {
   margin-top: 10px;
 }
 
+#dm {
+  color: blue;
+}
+
 /* 채팅창 끝 */
 
 /* 유저 입력칸 */
+
+#chatTarget {
+  height: 32px;
+  border: 0;
+  background-color: #e9e9e9;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+}
+
 #inputBox {
   display: flex;
   justify-content: center;
@@ -147,8 +184,6 @@ button {
   height: 30px;
   text-align: left;
   padding-left: 15px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
 }
 
 #addChatBtn {
