--- a/public/index.css
+++ b/public/index.css
@@ -29,7 +29,8 @@ h1 {
 }
 
 input,
-button {
+button,
+select {
   background-color: #e9e9e9;
   border: 0;
   font-size: 1rem;
@@ -83,6 +84,7 @@ button {
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.5);
   overflow-y: scroll;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .chatBox {
@@ -153,6 +155,10 @@ button {
 .nicknameBox {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-top: 10px;
+}
+
+#server-nicknameBox {
+  cursor: pointer;
 }
 
 #dm {
